# iamwebmorda

./: .gitignore  .gitmodules  build.sh  configure.sh  flash.sh  menuconfig.sh  openocd.cfg
app/: Make.defs  custom_app_main.c  heartbeat_daemon_main.c
board/: Kconfig
board/configs/iamwebmorda/: defconfig
board/configs/usbnsh/: defconfig
board/include/: board.h
board/src/: CMakeLists.txt  Makefile  stm32_bringup.c  stm32_dma_alloc.c  stm32_sdmmc.c  weact-stm32h750.h
board/src/etc/init.d/: rc.sysinit  rcS
modules/: CMakeLists.txt  Kconfig  Make.defs  Makefile
modules/heartbeat_daemon/: CMakeLists.txt  Kconfig  Make.defs  Makefile  heartbeat_daemon_main.c  heartbeat_daemon_main.cpp
modules/heartbeatd/: CMakeLists.txt  Kconfig  heartbeatd_main.cpp
modules/webmorda/: CMakeLists.txt  Kconfig  Make.defs  Makefile  webmorda_main.cpp
modules/webmorda/networking/: connecting_socket.cpp  listening_socket.cpp  server.cpp  server.hpp  simple_socket.cpp  simple_socket.hpp  single_client_server.cpp  single_client_server.hpp
modules/webmorda/networking/sockets/: binding_socket.cpp  binding_socket.hpp  connecting_socket.cpp  connecting_socket.hpp  listening_socket.cpp  listening_socket.hpp  simple_socket.cpp  simple_socket.hpp
modules/webmorda/web-interface/: index.html
modules/websocket/: CMakeLists.txt  Kconfig  websocket_main.cpp
